# continuous_integration

./: .gitignore  CMakeLists.txt  README.md  main.cpp
objects/: Agent.cpp  Agent.h  Dispatcher.cpp  Dispatcher.h  Environment.cpp  Environment.h  Repository.cpp  Repository.h  Task.cpp  Task.h
